# Arctos

./: README.md
arctos_bringup/: CMakeLists.txt  package.xml
arctos_bringup/launch/: arctos_controller.launch.py  demo.launch.py  send_trajectory.launch.py  view_arctos.launch.py
arctos_bringup/rviz/: view_robot.rviz
arctos_description/: CMakeLists.txt  package.xml
arctos_description/config/: arctos.urdf  arctos_controller.yaml  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arctos_description/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arctos_description/urdf/: arctos.gazebo  arctos.urdf  arctos_urdf.trans  arctos_urdf.xacro  materials.xacro
arctos_hardware_interface/: CMakeLists.txt  arctos_hardware_interface.xml  package.xml
arctos_hardware_interface/controller/: arctos_controller.cpp
arctos_hardware_interface/include/: arctos_can_encoder.hpp  arctos_controller.hpp  arctos_interface.hpp
arctos_hardware_interface/launch/: can_interface.launch.py  can_motor_bridge.launch.py  view_arctos.launch.py
arctos_hardware_interface/ros2_control/: arctos.ros2_control.xacro
arctos_hardware_interface/src/: arctos_interface.cpp
arctos_motor_driver/: CMakeLists.txt  package.xml
arctos_motor_driver/include/: arctos_can_decoder.hpp  arctos_can_encoder.hpp
arctos_motor_driver/src/: arctos_can_decoder.cpp  arctos_can_encoder.cpp
arctos_moveit/: .setup_assistant  CMakeLists.txt  package.xml
arctos_moveit/config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
arctos_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arctos_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arctos_moveit_config/config/: arctos_description.ros2_control.xacro  arctos_description.srdf  arctos_description.urdf.xacro  arctos_urdf.ros2_control.xacro  arctos_urdf.srdf  arctos_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arctos_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
